# kate

addons/: CMakeLists.txt
addons/dapclient/: CMakeLists.txt  dapclientplugin.cpp  dapclientplugin.h  json.h  schema.h
addons/dapclient/tests/: CMakeLists.txt  dapjsontest.cpp
addons/katebuild-plugin/: targets.cpp
addons/lspclient/: lspclientplugin.cpp  lspclientservermanager.cpp
addons/project/: gitwidget.cpp  gitwidget.h  kateprojectconfigpage.cpp  kateprojectconfigpage.h  kateprojectpluginview.cpp
apps/lib/: katemainwindow.cpp  katemdi.cpp  katemdi.h
kate/: CMakeLists.txt  kateapp.cpp  kateapp.h  kateappadaptor.cpp  kateconfigdialog.cpp  katemainwindow.cpp  katerunninginstanceinfo.cpp  katerunninginstanceinfo.h  main.cpp
kate/autotests/: CMakeLists.txt  location_history_test.cpp  session_manager_test.cpp  session_manager_test.h  session_test.cpp  session_test.h  sessions_action_test.cpp  sessions_action_test.h
kate/data/: kateui.rc
kate/session/: katesession.cpp  katesession.h  katesessionmanagedialog.cpp  katesessionmanagedialog.h  katesessionmanagedialog.ui  katesessionmanager.cpp  katesessionmanager.h  katesessionsaction.cpp  namegenerator.h  store.cpp  store.h
kate/ui/: sessionconfigwidget.ui
